--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
-  <body>
+  <body class="body">
     <header>
       <div class="header container">
         <nav class="navigation">
@@ -48,14 +48,14 @@
         <ul class="header__contacts">
           <li class="header__contacts-element">
             <a class="header__contacts-link" href="mailto:info@devstudio.com">
-              <svg class="header__contacts-icon" width="161" height="16">
+              <svg class="svg header__contacts-icon" width="161" height="16">
                 <use href="./images/icons.svg#icon-mail"></use>
               </svg>
             </a>
           </li>
           <li class="header__contacts-element">
             <a class="header__contacts-link" href="+48111111111"
-              ><svg class="header__contacts-icon" width="130" height="16">
+              ><svg class="svg header__contacts-icon" width="130" height="16">
                 <use href="./images/icons.svg#icon-tel"></use>
               </svg>
             </a>
@@ -67,7 +67,9 @@
     <main>
       <section class="background-section">
         <div class="background-section__container container">
-          <h1 id="agencja">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+          <h1 class="h1" id="agencja">
+            EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU
+          </h1>
           <button
             class="background-section__button"
             type="button"
@@ -82,7 +84,7 @@
         <ul class="paragraphs__list">
           <li class="paragraphs__element">
             <div class="paragraphs__icons">
-              <svg class="icon" width="70" height="70">
+              <svg class="svg icon" width="70" height="70">
                 <use href="./images/icons.svg#icon-antena"></use>
               </svg>
             </div>
@@ -94,7 +96,7 @@
           </li>
           <li class="paragraphs__element">
             <div class="paragraphs__icons">
-              <svg class="icon" width="70" height="70">
+              <svg class="svg icon" width="70" height="70">
                 <use href="./images/icons.svg#icon-clock"></use>
               </svg>
             </div>
@@ -106,7 +108,7 @@
           </li>
           <li class="paragraphs__element">
             <div class="paragraphs__icons">
-              <svg class="icon" width="70" height="70">
+              <svg class="svg icon" width="70" height="70">
                 <use href="./images/icons.svg#icon-diagram"></use>
               </svg>
             </div>
@@ -118,7 +120,7 @@
           </li>
           <li class="paragraphs__element">
             <div class="paragraphs__icons">
-              <svg class="icon" width="70" height="70">
+              <svg class="svg icon" width="70" height="70">
                 <use href="./images/icons.svg#icon-astronaut"></use>
               </svg>
             </div>
@@ -201,22 +203,22 @@
 
               <ul class="employees__icons">
                 <li class="employees__icons-element" tabindex="0">
-                  <svg class="employees__icons-svg" width="20" height="20">
+                  <svg class="svg employees__icons-svg" width="20" height="20">
                     <use href="./images/icons.svg#icon-instagram-2"></use>
                   </svg>
                 </li>
                 <li class="employees__icons-element" tabindex="0">
-                  <svg class="employees__icons-svg" width="20" height="20">
+                  <svg class="svg employees__icons-svg" width="20" height="20">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </li>
                 <li class="employees__icons-element" tabindex="0">
-                  <svg class="employees__icons-svg" width="20" height="20">
+                  <svg class="svg employees__icons-svg" width="20" height="20">
                     <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </li>
                 <li class="employees__icons-element" tabindex="0">
-                  <svg class="employees__icons-svg" width="20" height="20">
+                  <svg class="svg employees__icons-svg" width="20" height="20">
                     <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </li>
@@ -239,22 +241,22 @@
 
               <ul class="employees__icons">
                 <li class="employees__icons-element" tabindex="0">
-                  <svg class="employees__icons-svg" width="20" height="20">
+                  <svg class="svg employees__icons-svg" width="20" height="20">
                     <use href="./images/icons.svg#icon-instagram-2"></use>
                   </svg>
                 </li>
                 <li class="employees__icons-element" tabindex="0">
-                  <svg class="employees__icons-svg" width="20" height="20">
+                  <svg class="svg employees__icons-svg" width="20" height="20">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </li>
                 <li class="employees__icons-element" tabindex="0">
-                  <svg class="employees__icons-svg" width="20" height="20">
+                  <svg class="svg employees__icons-svg" width="20" height="20">
                     <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </li>
                 <li class="employees__icons-element" tabindex="0">
-                  <svg class="employees__icons-svg" width="20" height="20">
+                  <svg class="svg employees__icons-svg" width="20" height="20">
                     <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </li>
@@ -277,22 +279,22 @@
 
               <ul class="employees__icons">
                 <li class="employees__icons-element" tabindex="0">
-                  <svg class="employees__icons-svg" width="20" height="20">
+                  <svg class="svg employees__icons-svg" width="20" height="20">
                     <use href="./images/icons.svg#icon-instagram-2"></use>
                   </svg>
                 </li>
                 <li class="employees__icons-element" tabindex="0">
-                  <svg class="employees__icons-svg" width="20" height="20">
+                  <svg class="svg employees__icons-svg" width="20" height="20">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </li>
                 <li class="employees__icons-element" tabindex="0">
-                  <svg class="employees__icons-svg" width="20" height="20">
+                  <svg class="svg employees__icons-svg" width="20" height="20">
                     <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </li>
                 <li class="employees__icons-element" tabindex="0">
-                  <svg class="employees__icons-svg" width="20" height="20">
+                  <svg class="svg employees__icons-svg" width="20" height="20">
                     <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </li>
@@ -314,22 +316,22 @@
 
               <ul class="employees__icons">
                 <li class="employees__icons-element" tabindex="0">
-                  <svg class="employees__icons-svg" width="20" height="20">
+                  <svg class="svg employees__icons-svg" width="20" height="20">
                     <use href="./images/icons.svg#icon-instagram-2"></use>
                   </svg>
                 </li>
                 <li class="employees__icons-element" tabindex="0">
-                  <svg class="employees__icons-svg" width="20" height="20">
+                  <svg class="svg employees__icons-svg" width="20" height="20">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </li>
                 <li class="employees__icons-element" tabindex="0">
-                  <svg class="employees__icons-svg" width="20" height="20">
+                  <svg class="svg employees__icons-svg" width="20" height="20">
                     <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </li>
                 <li class="employees__icons-element" tabindex="0">
-                  <svg class="employees__icons-svg" width="20" height="20">
+                  <svg class="svg employees__icons-svg" width="20" height="20">
                     <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </li>
@@ -344,42 +346,42 @@
         <ul class="clients">
           <li tabindex="0">
             <div class="clients__container">
-              <svg class="clients__icons" width="41" height="46">
+              <svg class="svg clients__icons" width="41" height="46">
                 <use href="images/icons.svg#icon-group1"></use>
               </svg>
             </div>
           </li>
           <li tabindex="0">
             <div class="clients__container">
-              <svg class="clients__icons" width="40" height="52">
+              <svg class="svg clients__icons" width="40" height="52">
                 <use href="images/icons.svg#icon-group2"></use>
               </svg>
             </div>
           </li>
           <li tabindex="0">
             <div class="clients__container">
-              <svg class="clients__icons" width="43" height="41">
+              <svg class="svg clients__icons" width="43" height="41">
                 <use href="images/icons.svg#icon-group3"></use>
               </svg>
             </div>
           </li>
           <li tabindex="0">
             <div class="clients__container">
-              <svg class="clients__icons" width="84" height="40">
+              <svg class="svg clients__icons" width="84" height="40">
                 <use href="images/icons.svg#icon-group4"></use>
               </svg>
             </div>
           </li>
           <li tabindex="0">
             <div class="clients__container">
-              <svg class="clients__icons" width="62" height="45">
+              <svg class="svg clients__icons" width="62" height="45">
                 <use href="images/icons.svg#icon-group5"></use>
               </svg>
             </div>
           </li>
           <li tabindex="0">
             <div class="clients__container">
-              <svg class="clients__icons" width="94" height="44">
+              <svg class="svg clients__icons" width="94" height="44">
                 <use href="images/icons.svg#icon-group6"></use>
               </svg>
             </div>
@@ -419,22 +421,22 @@
           <span class="footer__social-title">DOŁĄCZ DO NAS</span>
           <ul class="footer__social-list">
             <li class="footer__social-element" tabindex="0">
-              <svg class="footer__social-icon" width="20" height="20">
+              <svg class="svg footer__social-icon" width="20" height="20">
                 <use href="./images/icons.svg#icon-instagram-2"></use>
               </svg>
             </li>
             <li class="footer__social-element" tabindex="0">
-              <svg class="footer__social-icon" width="20" height="20">
+              <svg class="svg footer__social-icon" width="20" height="20">
                 <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
             </li>
             <li class="footer__social-element" tabindex="0">
-              <svg class="footer__social-icon" width="20" height="20">
+              <svg class="svg footer__social-icon" width="20" height="20">
                 <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </li>
             <li class="footer__social-element" tabindex="0">
-              <svg class="footer__social-icon" width="20" height="20">
+              <svg class="svg footer__social-icon" width="20" height="20">
                 <use href="./images/icons.svg#icon-linkedin"></use>
               </svg>
             </li>
@@ -453,7 +455,7 @@
           </label>
           <button class="footer__newsletter-button" type="submit">
             Zapisz się<svg
-              class="footer__newsletter-icon"
+              class="svg footer__newsletter-icon"
               width="24"
               height="24"
             >
@@ -465,45 +467,57 @@
     </footer>
 
     <div class="backdrop is-hidden" data-modal>
-      <div class="modal is-hidden__container">
+      <div class="modal is-hidden--active">
         <form class="modal__form">
           <button type="button" class="close-btn" data-modal-close>X</button>
 
           <p class="modal__title">Zostaw swoje dane w formularzu poniżej</p>
 
-          <div class="modal__data">
-            <div class="modal__container">
+          <div class="modal__section">
+            <div class="modal__name">
               <label class="modal__label" for="text" width="24"> Imię </label>
             </div>
-            <div class="modal__icon">
+            <div class="modal__container">
               <input class="modal__input" id="text" type="text" name="name" />
-              <svg class="modal__svg modal__svg--trans" width="12" height="12">
+              <svg
+                class="svg modal__icon modal__icon--trans"
+                width="12"
+                height="12"
+              >
                 <use href="./images/icons.svg#person-mod"></use>
               </svg>
             </div>
 
-            <div class="modal__data">
+            <div class="modal__name">
               <label class="modal__label" for="tel"> Telefon </label>
             </div>
-            <div class="modal__icon">
+            <div class="modal__container">
               <input class="modal__input" id="tel" type="tel" name="tel" />
-              <svg class="modal__svg modal__svg--trans" width="14" height="14">
+              <svg
+                class="svg modal__icon modal__icon--trans"
+                width="14"
+                height="14"
+              >
                 <use href="./images/icons.svg#tel-mod"></use>
               </svg>
             </div>
 
-            <div class="modal__data">
+            <div class="modal__name">
               <label class="modal__label" for="mail"> Email </label>
             </div>
-            <div class="modal__icon">
+            <div class="modal__container">
               <input class="modal__input" id="mail" type="email" name="email" />
-              <svg class="modal__svg modal__svg--trans" width="16" height="16">
+              <svg
+                class="svg modal__icon modal__icon--trans"
+                width="16"
+                height="16"
+              >
                 <use href="./images/icons.svg#mail-mod"></use>
               </svg>
             </div>
           </div>
 
-          <label class="modal__comment">
+          <label class="modal__label modal__label--comment">
             Komentarz
             <textarea
               class="modal__textarea"
@@ -516,19 +530,19 @@
           <div class="modal__checkbox">
             <label class="modal__checkbox-label">
               <input
-                class="modal__input--checked"
+                class="modal__checkbox-in--checked"
                 type="checkbox"
                 name="aggry"
                 value="statute"
               />
               <div class="modal__checkbox-icon">
-                <svg class="modal__checkbox-svg" width="16" height="15">
+                <svg class="svg modal__checkbox-svg" width="16" height="15">
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </div>
               Oświadczam iż akceptuję
-              <a class="modal__link" href="#">Regulamin</a> i
-              <a class="modal__link" href="#">Politykę Prywatności.</a>
+              <a class="modal__checkbox-link" href="#">Regulamin</a> i
+              <a class="modal__checkbox-link" href="#">Politykę Prywatności.</a>
             </label>
           </div>
 
