--- a/portfolio.html
+++ b/portfolio.html
@@ -46,14 +46,14 @@
         <ul class="header__contacts">
           <li class="header__contacts-element">
             <a class="header__contacts-link" href="mailto:info@devstudio.com">
-              <svg class="header__contacts-icon" width="161" height="16">
+              <svg class="svg header__contacts-icon" width="161" height="16">
                 <use href="./images/icons.svg#icon-mail"></use>
               </svg>
             </a>
           </li>
           <li class="header__contacts-element">
             <a class="header__contacts-link" href="+48111111111"
-              ><svg class="header__contacts-icon" width="130" height="16">
+              ><svg class="svg header__contacts-icon" width="130" height="16">
                 <use href="./images/icons.svg#icon-tel"></use>
               </svg>
             </a>
@@ -419,22 +419,22 @@
           <span class="footer__social-title">DOŁĄCZ DO NAS</span>
           <ul class="footer__social-list">
             <li class="footer__social-element" tabindex="0">
-              <svg class="footer__social-icon" width="20" height="20">
+              <svg class="svg footer__social-icon" width="20" height="20">
                 <use href="./images/icons.svg#icon-instagram-2"></use>
               </svg>
             </li>
             <li class="footer__social-element" tabindex="0">
-              <svg class="footer__social-icon" width="20" height="20">
+              <svg class="svg footer__social-icon" width="20" height="20">
                 <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
             </li>
             <li class="footer__social-element" tabindex="0">
-              <svg class="footer__social-icon" width="20" height="20">
+              <svg class="svg footer__social-icon" width="20" height="20">
                 <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </li>
             <li class="footer__social-element" tabindex="0">
-              <svg class="footer__social-icon" width="20" height="20">
+              <svg class="svg footer__social-icon" width="20" height="20">
                 <use href="./images/icons.svg#icon-linkedin"></use>
               </svg>
             </li>
