--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/main.min.css" />
   </head>
 
   <body>
@@ -453,7 +453,7 @@
           </label>
           <button class="footer__newsletter-button" type="submit">
             Zapisz się<svg
-              class="footer__newsletter-icon"
+              class="svg footer__newsletter-icon"
               width="24"
               height="24"
             >
