--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
       <div class="header container">
         <nav class="navigation">
           <a class="logo" href="#"
-            >Web<span class="logo--header">Studio</span></a
+            >Web<span class="logo__header">Studio</span></a
           >
 
           <ul class="navigation-list">
             <li class="navigation-list__element page-active">
               <a
-                class="navigation-list__link page-active--color"
+                class="navigation-list__link navigation-list__link--active"
                 href="index.html"
                 >Agencja</a
               >
@@ -195,7 +195,7 @@
                 height="260"
               />
               <figure class="employees__overlay">
-                <figcaption class="employees__overlay--position">
+                <figcaption class="employees__text-position">
                   <span class="employees__name">John Doe</span>
                   <span class="employees__job">Product Designer</span>
                 </figcaption>
@@ -233,7 +233,7 @@
                 height="260"
               />
               <figure class="employees__overlay">
-                <figcaption class="employees__overlay--position">
+                <figcaption class="employees__text-position">
                   <span class="employees__name">John Doe</span>
                   <span class="employees__job">Frontend Developer</span>
                 </figcaption>
@@ -271,7 +271,7 @@
                 height="260"
               />
               <figure class="employees__overlay">
-                <figcaption class="employees__overlay--position">
+                <figcaption class="employees__text-position">
                   <span class="employees__name">John Doe</span>
                   <span class="employees__job">Marketing</span>
                 </figcaption>
@@ -308,7 +308,7 @@
                 height="260"
               />
               <figure class="employees__overlay">
-                <figcaption class="employees__overlay--position">
+                <figcaption class="employees__text-position">
                   <span class="employees__name">John Doe</span>
                   <span class="employees__job">UI Designer</span>
                 </figcaption>
@@ -394,7 +394,7 @@
       <section class="footer__section container">
         <div class="footer__nav">
           <a class="footer__nav-logo logo" href="#" id="kontakt"
-            >Web<span class="logo--footer">Studio</span></a
+            >Web<span class="logo__footer">Studio</span></a
           >
           <address class="footer__contacts">
             <ul>
