--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
       <div class="header container">
         <nav class="navigation">
           <a class="logo" href="#"
-            >Web<span class="logo--header">Studio</span></a
+            >Web<span class="logo__header">Studio</span></a
           >
 
           <ul class="navigation-list">
@@ -32,7 +32,7 @@
             </li>
             <li class="navigation-list__element page-active">
               <a
-                class="navigation-list__link page-active--color"
+                class="navigation-list__link navigation-list__link--active"
                 href="portfolio.html"
                 >Portfolio</a
               >
@@ -65,23 +65,23 @@
     <main>
       <section class="container portfolio">
         <ul class="portfolio__nav">
-          <li class="portfolio__nav--position">
+          <li class="portfolio__nav-btn-position">
             <button class="portfolio__nav-button" type="button">
               Wszystkie
             </button>
           </li>
-          <li class="portfolio__nav--position">
+          <li class="portfolio__nav-btn-position">
             <button class="portfolio__nav-button" type="button">Strony</button>
           </li>
-          <li class="portfolio__nav--position">
+          <li class="portfolio__nav-btn-position">
             <button class="portfolio__nav-button" type="button">
               Aplikacje
             </button>
           </li>
-          <li class="portfolio__nav--position">
+          <li class="portfolio__nav-btn-position">
             <button class="portfolio__nav-button" type="button">Dizajn</button>
           </li>
-          <li class="portfolio__nav--position">
+          <li class="portfolio__nav-btn-position">
             <button class="portfolio__nav-button" type="button">
               Marketing
             </button>
@@ -110,11 +110,11 @@
             <figure class="portfolio__projects-descr">
               <figcaption>
                 <span
-                  class="portfolio__projects-title portfolio__projects-descr--position"
+                  class="portfolio__projects-title portfolio__projects-title--position"
                   >Technocrack</span
                 >
                 <span
-                  class="portfolio__projects-category portfolio__projects-descr--position"
+                  class="portfolio__projects-category portfolio__projects-title--position"
                   >Strona internetowa</span
                 >
               </figcaption>
@@ -143,11 +143,11 @@
             <figure class="portfolio__projects-descr">
               <figcaption>
                 <span
-                  class="portfolio__projects-title portfolio__projects-descr--position"
+                  class="portfolio__projects-title portfolio__projects-title--position"
                   >Grafika New Orlean vs Golden Star</span
                 >
                 <span
-                  class="portfolio__projects-category portfolio__projects-descr--position"
+                  class="portfolio__projects-category portfolio__projects-title--position"
                   >Dizajn</span
                 >
               </figcaption>
@@ -176,11 +176,11 @@
             <figure class="portfolio__projects-descr">
               <figcaption>
                 <span
-                  class="portfolio__projects-title portfolio__projects-descr--position"
+                  class="portfolio__projects-title portfolio__projects-title--position"
                   >Restauracja Seafood</span
                 >
                 <span
-                  class="portfolio__projects-category portfolio__projects-descr--position"
+                  class="portfolio__projects-category portfolio__projects-title--position"
                   >Aplikacja</span
                 >
               </figcaption>
@@ -209,11 +209,11 @@
             <figure class="portfolio__projects-descr">
               <figcaption>
                 <span
-                  class="portfolio__projects-title portfolio__projects-descr--position"
+                  class="portfolio__projects-title portfolio__projects-title--position"
                   >Projekt Prime</span
                 >
                 <span
-                  class="portfolio__projects-category portfolio__projects-descr--position"
+                  class="portfolio__projects-category portfolio__projects-title--position"
                   >Marketing</span
                 >
               </figcaption>
@@ -242,11 +242,11 @@
             <figure class="portfolio__projects-descr">
               <figcaption>
                 <span
-                  class="portfolio__projects-title portfolio__projects-descr--position"
+                  class="portfolio__projects-title portfolio__projects-title--position"
                   >Projekt Boxes</span
                 >
                 <span
-                  class="portfolio__projects-category portfolio__projects-descr--position"
+                  class="portfolio__projects-category portfolio__projects-title--position"
                   >Aplikacja</span
                 >
               </figcaption>
@@ -275,11 +275,11 @@
             <figure class="portfolio__projects-descr">
               <figcaption>
                 <span
-                  class="portfolio__projects-title portfolio__projects-descr--position"
+                  class="portfolio__projects-title portfolio__projects-title--position"
                   >Inspiration has no Borders</span
                 >
                 <span
-                  class="portfolio__projects-category portfolio__projects-descr--position"
+                  class="portfolio__projects-category portfolio__projects-title--position"
                   >Strona internetowa</span
                 >
               </figcaption>
@@ -308,11 +308,11 @@
             <figure class="portfolio__projects-descr">
               <figcaption>
                 <span
-                  class="portfolio__projects-title portfolio__projects-descr--position"
+                  class="portfolio__projects-title portfolio__projects-title--position"
                   >Magazyn Limited Edition</span
                 >
                 <span
-                  class="portfolio__projects-category portfolio__projects-descr--position"
+                  class="portfolio__projects-category portfolio__projects-title--position"
                   >Dizajn</span
                 >
               </figcaption>
@@ -341,11 +341,11 @@
             <figure class="portfolio__projects-descr">
               <figcaption>
                 <span
-                  class="portfolio__projects-title portfolio__projects-descr--position"
+                  class="portfolio__projects-title portfolio__projects-title--position"
                   >Projekt LAB</span
                 >
                 <span
-                  class="portfolio__projects-category portfolio__projects-descr--position"
+                  class="portfolio__projects-category portfolio__projects-title--position"
                   >Marketing</span
                 >
               </figcaption>
@@ -374,11 +374,11 @@
             <figure class="portfolio__projects-descr">
               <figcaption>
                 <span
-                  class="portfolio__projects-title portfolio__projects-descr--position"
+                  class="portfolio__projects-title portfolio__projects-title--position"
                   >Growing Business</span
                 >
                 <span
-                  class="portfolio__projects-category portfolio__projects-descr--position"
+                  class="portfolio__projects-category portfolio__projects-title--position"
                   >Aplikacja</span
                 >
               </figcaption>
@@ -392,7 +392,7 @@
       <section class="footer__section container">
         <div class="footer__nav">
           <a class="footer__nav-logo logo" href="#" id="kontakt"
-            >Web<span class="logo--footer">Studio</span></a
+            >Web<span class="logo__footer">Studio</span></a
           >
           <address class="footer__contacts">
             <ul>
