--- a/index.html
+++ b/index.html
@@ -344,47 +344,35 @@
       <section class="section">
         <h2 class="titles">Nasi klienci</h2>
         <ul class="clients">
-          <li tabindex="0">
-            <div class="clients__container">
-              <svg class="svg clients__icons" width="41" height="46">
-                <use href="images/icons.svg#icon-group1"></use>
-              </svg>
-            </div>
+          <li class="clients__container" tabindex="0">
+            <svg class="svg clients__icons" width="41" height="46">
+              <use href="images/icons.svg#icon-group1"></use>
+            </svg>
           </li>
-          <li tabindex="0">
-            <div class="clients__container">
-              <svg class="svg clients__icons" width="40" height="52">
-                <use href="images/icons.svg#icon-group2"></use>
-              </svg>
-            </div>
+          <li class="clients__container" tabindex="0">
+            <svg class="svg clients__icons" width="40" height="52">
+              <use href="images/icons.svg#icon-group2"></use>
+            </svg>
           </li>
-          <li tabindex="0">
-            <div class="clients__container">
-              <svg class="svg clients__icons" width="43" height="41">
-                <use href="images/icons.svg#icon-group3"></use>
-              </svg>
-            </div>
+          <li class="clients__container" tabindex="0">
+            <svg class="svg clients__icons" width="43" height="41">
+              <use href="images/icons.svg#icon-group3"></use>
+            </svg>
           </li>
-          <li tabindex="0">
-            <div class="clients__container">
-              <svg class="svg clients__icons" width="84" height="40">
-                <use href="images/icons.svg#icon-group4"></use>
-              </svg>
-            </div>
+          <li class="clients__container" tabindex="0">
+            <svg class="svg clients__icons" width="84" height="40">
+              <use href="images/icons.svg#icon-group4"></use>
+            </svg>
           </li>
-          <li tabindex="0">
-            <div class="clients__container">
-              <svg class="svg clients__icons" width="62" height="45">
-                <use href="images/icons.svg#icon-group5"></use>
-              </svg>
-            </div>
+          <li class="clients__container" tabindex="0">
+            <svg class="svg clients__icons" width="62" height="45">
+              <use href="images/icons.svg#icon-group5"></use>
+            </svg>
           </li>
-          <li tabindex="0">
-            <div class="clients__container">
-              <svg class="svg clients__icons" width="94" height="44">
-                <use href="images/icons.svg#icon-group6"></use>
-              </svg>
-            </div>
+          <li class="clients__container" tabindex="0">
+            <svg class="svg clients__icons" width="94" height="44">
+              <use href="images/icons.svg#icon-group6"></use>
+            </svg>
           </li>
         </ul>
       </section>
