--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/main.min.css" />
   </head>
 
-  <body>
+  <body class="body">
     <header>
       <div class="header container">
         <nav class="navigation">
