--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
     </footer>
 
     <div class="backdrop is-hidden" data-modal>
-      <div class="modal is-hidden--active">
+      <div class="modal modal--active">
         <form class="modal__form">
           <button type="button" class="close-btn" data-modal-close>X</button>
 
@@ -518,7 +518,7 @@
           <div class="modal__checkbox">
             <label class="modal__checkbox-label">
               <input
-                class="modal__checkbox-in--checked"
+                class="modal__checkbox-input"
                 type="checkbox"
                 name="aggry"
                 value="statute"
